--- a/index.html
+++ b/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guilherme Romeu - Desenvolvedor Front-Emd</title>
-    <!-- comentario  -->
+    <title>Guilherme Romeu - Desenvolvedor Front-End</title>
+
+    <!-- Ligação entre HTML e CSS -->
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
 
-
     <div class="principal">
+        <img src="https://avatars.githubusercontent.com/u/64562207?v=4" alt="Minha Foto" height="100">
 
-        <img src="https://avatars.githubusercontent.com/u/64562207?v=4" alt="descrição da imagem" width="100">
         <h1>Guilherme Romeu</h1>
         <h2>Desenvolvedor Front-End</h2>
+        <p>apaixonado por tecnologia.</p>
 
-
-        <p>Apaixonado por tecnologia</p>
         <div class="menu">
-
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
-            <a href="" target="_blank">linkedin</a>
-            <a href="">github</a>
-            <a href="">whatsapp</a>
-
-        
+            <a href="https://www.instagram.com/guilhermegr__/" target="_blank">Instagram</a>
+            <a href="https://www.linkedin.com/in/guilherme-romeu-961887385/?_l=pt_BR"  target="_blank">Linkedin</a>
+            <a href="https://github.com/G-Romeu"  target="_blank">Github</a>
         </div>
-            <a href="" target="_blank" class="assinatura">Desenvolvido por Coti Informatica</a>
-        
+
+        <a href="https://www.cotiinformatica.com.br" target="_blank" class="assinatura">Desenvolvido por Coti Informática</a>
 
     </div>
 
-
-
-
 </body>
+
 </html>
